p2/confs/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app1
  template:
    metadata:
      labels:
        app: my-app1
    spec:
      containers:
      - name: my-app1
        image: grafana/grafana
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: my-app1-service
spec:
  type: NodePort
  selector:
    app: my-app1
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 30081
